deploy/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
  labels:
    app: incrdble
  name: incrdble
  namespace: default
spec:
  ingressClassName: internal
  rules:
  - host: incrdble.internal.ibidem.no
    http:
      paths:
      - backend:
          service:
            name: incrdble
            port:
              name: http
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - incrdble.internal.ibidem.no
    secretName: cert-ingress-incrdble-internal-ibidem-no
